# KVASS

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  common_utils.c  comms_manager.c  config_manager.c  gpio_manager.c  idf_component.yml  kb_interconnect_manager.c  main.c
main/include/: common_kvass.h  common_utils.h  comms_manager.h  config_manager.h  gpio_manager.h  kb_interconnect_manager.h
